# foo-physics

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/foo/: __init__.py  foo.py
tests/: test_foo.py
